<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Clubby</string>
    <string name="action_logout">Abmelden</string>
    <string name="action_create_club">Neuer Club</string>
    <string name="action_add_member">Mitglied hinzufügen</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Anmelden</string>
    <string name="club_members">Mitglieder</string>
    <string name="new_club">Neuer Club</string>
    <string name="new_member">Neues Mitglied</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Benutzername</string>
    <string name="e_mail_text">E-Mail Adresse</string>
    <string name="prompt_password">Passwort</string>
    <string name="prompt_password_repeat">Passwort wiederholen</string>
    <string name="signup_text">Neu bei Clubby?</string>
    <string name="signup_button_text">Registrieren</string>
    <string name="login_text">Du hast schon ein Konto?</string>
    <string name="login_button_text">Anmelden</string>
    <string name="facebook_text">Mit Facebook anmelden:</string>
    <string name="facebook_button_text">Facebook</string>

    <string name="prompt_new_club">Clubname</string>
    <string name="create_club_button_text">Erstellen</string>
    <string name="prompt_add_member">Benutzername</string>
    <string name="add_member_button_text">Hinzufügen</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Ungültige E-Mail Adresse</string>
    <string name="error_invalid_password">Mindestens sechs Zeichen</string>
    <string name="error_notequal_password">Passwörter sind nicht gleich</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Mindestens fünf Zeichen</string>
    <string name="error_min_3_chars">Mindestens drei Zeichen</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
